pxc/tests/test_02_type/constmemfunc.px
namespace constmemfunc;
import common "";

function int foo(int x) const { // error
  return 3 + x;
}

println(foo(3));
